--- a/snippets/section-divider-2-svg.liquid
+++ b/snippets/section-divider-2-svg.liquid
@@ -7,5 +7,5 @@
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
 >
-  <path d="M789.409 15.1233C471.678 51.9452 158.865 19.8356 0 0V96H1440V55.5616C1269.94 -3.09041 933.144 0.657534 789.409 15.1233Z" fill="{{ fill_color | default: '#FFDAF5' }}"/>
+  <path d="M789.409 15.1233C471.678 51.9452 158.865 19.8356 0 0V96H1440V96V55.5616C1269.94 -3.09041 933.144 0.657534 789.409 15.1233Z" fill="{{ fill_color | default: '#FFDAF5' }}"/>
 </svg>
