--- a/sections/achieve-glass-skin.liquid
+++ b/sections/achieve-glass-skin.liquid
@@ -166,8 +166,91 @@
   }
   @media (min-width: 1024px) {
     .glass-skin-{{ section.id }}-testimonial-block {
-      margin-top: -4.5rem;
-      max-width: 36rem;
+      margin-top: -8rem;
+      max-width: 100%;
+    }
+  }
+
+  .testimonial-block-{{ section.id }} {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #fff;
+    border-radius: 1rem;
+    box-shadow: 0 0.2rem 1rem rgba(0,0,0,0.04);
+    padding: 2rem 1.5rem;
+    max-width: 36rem;
+    border: 0.3rem solid var(--testimonial-border-color-{{ section.id }});
+  }
+  .testimonial-block-{{ section.id }}__image {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 0.3rem solid var(--testimonial-image-border-color-{{ section.id }});
+    margin-bottom: 1.2rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .testimonial-block-{{ section.id }}__quote {
+    margin-bottom: 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .testimonial-block-{{ section.id }}__quote svg {
+    transform: rotate(180deg);
+    width: 2rem;
+    height: 2rem;
+  }
+  .testimonial-block-{{ section.id }}__quote svg path {
+    fill: var(--testimonial-star-color-{{ section.id }});
+  }
+  .testimonial-block-{{ section.id }}__stars {
+    color: var(--testimonial-star-color-{{ section.id }});
+    margin-left: 1rem;
+    font-size: 1.4rem;
+    letter-spacing: 0.1rem;
+  }
+  .testimonial-block-{{ section.id }}__text {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  .testimonial-block-{{ section.id }}__author {
+    font-weight: bold;
+    font-size: 1.1rem;
+    text-align: center;
+  }
+  @media (min-width: 1024px) {
+    .testimonial-block-{{ section.id }} {
+      flex-direction: row;
+      align-items: flex-start;
+      max-width: 48rem;
+      padding: 2rem 3rem;
+      text-align: left;
+    }
+    .testimonial-block-{{ section.id }}__image {
+      align-self: center;
+      margin-bottom: 0;
+      margin-right: 2rem;
+      width: 7rem;
+      height: 7rem;
+      margin-left: 0;
+    }
+    .testimonial-block-{{ section.id }}__content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .testimonial-block-{{ section.id }}__text,
+    .testimonial-block-{{ section.id }}__author {
+      text-align: left;
+    }
+    .testimonial-block-{{ section.id }}__quote {
+      justify-content: flex-start;
     }
   }
 {%- endstyle -%}
