--- a/sections/reveal-your-glow-collagen.liquid
+++ b/sections/reveal-your-glow-collagen.liquid
@@ -43,6 +43,7 @@
   }
   .reveal-glow-{{ section.id }}__image-bg {
     display: block !important;
+    position: relative;
     width: 100%;
     aspect-ratio: 1/1;
     background-size: cover;
@@ -51,6 +52,17 @@
     border-style: solid;
     border-width: 4px;
   }
+  .reveal-glow-{{ section.id }}__image-bg::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    border: 1px solid red;
+  }
+
   .reveal-glow-{{ section.id }}__content {
     width: 100%;
     display: flex;
@@ -120,6 +132,11 @@
       {% for block in section.blocks %}
         {% case block.type %}
           {% when 'image' %}
+            <style>
+              :root {
+                ---{{ section.id }}: {{ block.settings.testimonial_border_color }};
+              }
+            </style>
             <div class="reveal-glow-{{ section.id }}__block">
               <div
                 class="reveal-glow-{{ section.id }}__image-bg"
@@ -167,7 +184,7 @@
                     class="reveal-glow-{{ section.id }}__button"
                   >
                     <span class="reveal-glow-{{ section.id }}__button-text">{{ block.settings.button_text }}</span>
-                    <span class="reveal-glow-{{ section.id }}__button-icon">
+                    <span class="reveal-glow-{{ section.id }}__button-icon" style="display: none;">
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="icon icon-arrow" viewBox="0 0 14 10">
                         <path fill="currentColor" fill-rule="evenodd" d="M8.537.808a.5.5 0 0 1 .817-.162l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 1 1-.708-.708L11.793 5.5H1a.5.5 0 0 1 0-1h10.793L8.646 1.354a.5.5 0 0 1-.109-.546" clip-rule="evenodd"/>
                       </svg>
@@ -176,7 +193,7 @@
                 {% else %}
                   <a href="#" class="reveal-glow-{{ section.id }}__button" aria-disabled="true">
                     <span class="reveal-glow-{{ section.id }}__button-text">{{ block.settings.button_text }}</span>
-                    <span class="reveal-glow-{{ section.id }}__button-icon">
+                    <span class="reveal-glow-{{ section.id }}__button-icon" style="display: none;">
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="icon icon-arrow" viewBox="0 0 14 10">
                         <path fill="currentColor" fill-rule="evenodd" d="M8.537.808a.5.5 0 0 1 .817-.162l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 1 1-.708-.708L11.793 5.5H1a.5.5 0 0 1 0-1h10.793L8.646 1.354a.5.5 0 0 1-.109-.546" clip-rule="evenodd"/>
                       </svg>
