Update color scheme in "Radiant Skin Experience" and "Reveal Your Glow With Collagen" sections. Change border color to a new shade of pink and introduce customizable outline settings for images, enhancing visual appeal and flexibility.

--- a/sections/radiant-skin-experience.liquid
+++ b/sections/radiant-skin-experience.liquid
@@ -79,7 +79,7 @@
     line-height: 1.5;
   }
   .radiant-skin-experience-{{ section.id }} .radiant-skin-experience__check {
-    color: #e87fc1;
+    color: #ff66c4;
     font-size: 1.2rem;
     margin-top: 0.2rem;
   }
@@ -194,7 +194,7 @@
       "type": "color",
       "id": "card_border_color",
       "label": "Card border color",
-      "default": "#e87fc1"
+      "default": "#ff66c4"
     },
     {
       "type": "color",
