--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -37,6 +37,13 @@
         padding-bottom: {{ section.settings.padding_bottom }}px;
       }
     }
+    div.global-media-settings, button.thumbnail[aria-current="true"] {
+      border: 2px solid #FF66C4;
+    }
+
+    button.global-media-settings {
+      border: 2px solid #FFFFFF;
+    }
   {%- endstyle -%}
 
   <script src="{{ 'product-info.js' | asset_url }}" defer="defer"></script>
